@@ -4,3 +4,4 @@ TOC {#HttpImportTOC}
 - @ref HttpImport
   - @ref HttpImportSelfContained
   - @ref HttpImportHeaderData
+  - @ref HttpImportEdges
